# tondi-dashboard

./: .gitignore  Cargo.toml  DEVNET_SUPPORT.md  GRPC_INTEGRATION.md  README.md  TONDI_GRPC_IMPLEMENTATION_SUMMARY.md  WALLET_ENDPOINT_TESTING_GUIDE.md  WAVEFORM_IMPROVEMENTS.md  test_tondi_node.rs
app/: Cargo.toml  index.html  manifest.json  pwa.js
app/src/: main.rs
core/: CHANGELOG.md  Cargo.toml
core/resources/i18n/: i18n.json
core/src/: app.rs  collection.rs  core.rs  device.rs  error.rs  events.rs  frame.rs  imports.rs  lib.rs  menu.rs  network.rs  servers.rs  settings.rs  state.rs  status.rs  storage.rs  sync.rs
core/src/egui/: mnemonic.rs
core/src/egui/theme/: color.rs  mod.rs  style.rs
core/src/interop/: client.rs  transport.rs
core/src/modules/: account_create.rs  block_dag.rs  changelog.rs  donations.rs  export.rs  import.rs  logs.rs  metrics.rs  mod.rs  node.rs  overview.rs  private_key_create.rs  request.rs  scanner.rs  testing.rs  wallet_create.rs  wallet_endpoint_test.rs  wallet_open.rs  welcome.rs
core/src/modules/account_manager/: balance.rs  estimator.rs  menus.rs  mod.rs  network.rs  processor.rs  transfer.rs
core/src/modules/settings/: mod.rs
core/src/primitives/: account.rs  block.rs  descriptor.rs  transaction.rs
core/src/runtime/: mod.rs  panic.rs  signals.rs  system.rs
core/src/runtime/services/: blockdag_monitor.rs  metrics_monitor.rs  mod.rs  peer_monitor.rs  repaint_service.rs  update_monitor.rs
core/src/runtime/services/kaspa/: daemon.rs  inproc.rs  mod.rs
core/src/runtime/services/market_monitor/: coingecko.rs  coinmarketcap.rs
core/src/runtime/services/tondi/: README.md  config.rs  daemon.rs  grpc_client.rs  mod.rs
core/src/tests/: mod.rs  transactions.rs  wallet_endpoint_integration_tests.rs
core/src/utils/: format.rs  i18n.rs  math.rs  version.rs  wallet.rs
extensions/chrome/: Cargo.toml  api.js  background.js  content-script.js  manifest.json  popup.html  popup.js  pwa.js  trunk.html
extensions/chrome/src/: client.rs  imports.rs  lib.rs  server.rs  transport.rs
macros/: Cargo.toml
test_tondi_node/: Cargo.toml  FINAL_DIAGNOSIS.md  FINAL_FIX_GUIDE.md  FINAL_REPORT.md  GRPC_FIX_SUMMARY.md  SOLUTION_RECOMMENDATIONS.md  deep_diagnosis.sh  diagnose_metrics.sh  diagnose_node.sh  scan_ports.sh  test_api_endpoints.sh  test_common_ports.sh  test_config_fix.sh  test_config_structure.md  test_connection_final.sh  test_correct_api.sh  test_correct_ports.sh  test_final_fix.sh  test_final_verification.sh  test_fixed_grpc.sh  test_grpc_api.rs  test_grpc_client.rs  test_grpc_connection.sh  test_grpc_integration.rs  test_metrics_fix.sh  test_network.sh  test_remote_config  test_remote_config.rs  test_simple_connection  test_simple_connection.rs  test_wrpc_connection.sh  test_wrpc_simple.sh  verify_config.sh
test_tondi_node/src/: grpc_test.rs
