[workspace]
resolver = "2"
members = [
    "app",
    "core",
    "macros",
    "extensions/chrome",
]
default-members = ["app"]

[workspace.package]
rust-version = "1.81.0"
version = "1.0.0"
authors = ["Tondi Developers"]
license = "ISC"
edition = "2021"


[workspace.dependencies]

tondi-dashboard = { version = "1.0.0", path = "app/", default-features = false }
tondi-dashboard-core = { version = "1.0.0", path = "core/", default-features = false }
tondi-dashboard-macros = { version = "1.0.0", path = "macros/", default-features = false }

# ___________________
#  ____ ____ _  _ _ 
#  |___ | __ |  | | 
#  |___ |__] |__| | 
# ___________________

egui = "=0.31.1"
epaint = "=0.31.1"
egui_plot = "0.32.1"
egui_extras = { version = "=0.31.1", features = ["svg","image"] }
eframe = { version = "=0.31.1",  default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

egui-phosphor = { version = "=0.9.0", features = ["thin","light","regular","bold"] }
egui-notify = { version = "0.19.0"}

# Tondi dependencies
tondi-addresses = { path = "../Tondi/crypto/addresses" }
tondi-alloc = { path = "../Tondi/utils/alloc" }
tondi-bip32 = { path = "../Tondi/wallet/bip32" }
tondi-cli = { path = "../Tondi/cli" }
tondi-consensus-core = { path = "../Tondi/consensus/core" }
tondi-core = { path = "../Tondi/core" }
tondi-metrics-core = { path = "../Tondi/metrics/core" }
tondi-notify = { path = "../Tondi/notify" }
tondi-rpc-core = { path = "../Tondi/rpc/core" }
tondi-rpc-service = { path = "../Tondi/rpc/service" }
tondi-utils = { path = "../Tondi/utils" }
tondi-wallet-core = { path = "../Tondi/wallet/core" }
tondi-wallet-keys = { path = "../Tondi/wallet/keys" }
tondi-wrpc-client = { path = "../Tondi/rpc/wrpc/client" }
tondi-wrpc-server = { path = "../Tondi/rpc/wrpc/server" }
tondi-txscript = { path = "../Tondi/crypto/txscript" }
tondid = { path = "../Tondi/tondid" }

# workflow dependencies
workflow-core = "0.18.0"
workflow-i18n = "0.18.0"
workflow-chrome = "0.18.0"
workflow-dom = "0.18.0"
workflow-http = "0.18.0"
workflow-log = "0.18.0"
workflow-store = "0.18.0"
workflow-wasm = "0.18.0"

# ----------------------------------------
# ----------------------------------------
# ----------------------------------------

ahash = "0.8.6"
async-trait = "0.1.73"
borsh = { version = "1.5.1", features = ["derive", "rc"] }
cfg-if = "1.0.0"
chrome-sys = "0.2.0"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "string", "cargo"] }
convert_case = "0.6.0"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
ctrlc = { version = "3.2", features = ["termination"] }
derivative = "2.2.0"
downcast = "0.11.0"
downcast-rs = "1.2.0"
env_logger = "0.10"
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29", default-features = false, features = ["alloc"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
js-sys = "0.3.64"
log = "0.4.20"
nix = { version = "0.28.0", features = ["signal"]}
num_cpus = "1.15.0"
open = "5.0.1"
pad = "0.1.6"
passwords = "3.1.16"
qrcode = "0.12.0"
rand = "0.8.5"
rfd = "0.14.1"
ritehash = "0.2.0"
rlimit = "0.10.1"
separator = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.108"
slug = "0.1.5"
smallvec = { version = "1.11.1", features = ["serde"] }
sysinfo = "0.29.10"
thiserror = "1.0.50"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "process"] }
toml = "0.8.12"
walkdir = "2.4.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = ['Window'] }
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 2

[profile.native-release]
inherits = "release"
opt-level = 3

[profile.console]
inherits = "release"
opt-level = 2
strip = false

