[package]
name = "tondi-dashboard-chrome"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
browser-extension = ["tondi-dashboard-core/browser-extension"]
default = []
# default = ["browser-extension"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tondi-dashboard-core = { workspace = true, features = ["browser-extension"] }
tondi-wallet-core.workspace = true
workflow-chrome.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-store.workspace = true
workflow-wasm.workspace = true

async-trait.workspace = true
borsh.workspace = true
chrome-sys.workspace = true
js-sys.workspace = true
# tondi-ng-macros.workspace = true
tondi-utils.workspace = true
rand.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true